<resources>
    <string name="app_name">Baked</string>
    <string name="login">Login</string>
    <string name="anonymousLogin">Continue anonymous</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="option_get_place">Get place</string>
    <string name="pick_place">Choose a place</string>
    <string name="nslc_button">find\nstores</string>
    <string name="recommendation_text">Recommendation</string>
    <string name="map">Map</string>
    <string name="gmail_login">Connect with Gmail</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_info">InfoActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="welcome">Welcome</string>
    <string name="title_activity_user_account">UserAccountActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_useraccount">useraccount</string>
    <string name="user_id">"@"Booty Baba</string>
    <string name="user_name">bleh bl bleh</string>
    <string name="order_history">Order History</string>
    <string name="reviews">Reviews</string>
    <string name="favourites">Favourites</string>
    <string name="following_value">1</string>
    <string name="following">FOLLOWING</string>
    <string name="post_value">2</string>
    <string name="posts">POSTS</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string-array name="product_array">
        <item>ACDC</item>
        <item>Acapulco Gold</item>
        <item>Afgoo</item>
        <item>Blue Dream</item>
        <item>Ghost Train Haze</item>
        <item>Grapefruit</item>
        <item>Great White Shark</item>
        <item>Headband</item>
        <item>LSD</item>
        <item>Lavender</item>
        <item>Mango Kush</item>
        <item>Northern Lights</item>
        <item>Obama Kush</item>
        <item>Orange Kush</item>
        <item>Platinum</item>
        <item>Silver Haze</item>
        <item>Super Sour Diesel</item>
    </string-array>

</resources>
