<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbar"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleTextAppearance="@android:color/transparent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:contentDescription="@string/user_name"
                android:scaleType="centerCrop"
                android:src="@drawable/ganjaoldy"
                app:layout_collapseMode="parallax" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:layout_collapseParallaxMultiplier="1.0"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />


        </android.support.design.widget.CollapsingToolbarLayout>


    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            >

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                app:cardElevation="5dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"

                    >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:padding="12dp"
                        android:text="@string/user_name"
                        android:textAlignment="center"
                        android:textColor="@color/colorPrimaryText"
                        android:textSize="40sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:padding="0dp"
                        android:text="@string/user_id"
                        android:textAlignment="center"
                        android:textColor="@color/colorPrimaryText"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:divider="@color/colorPrimary"
                        android:orientation="horizontal"
                        android:padding="12dp"
                        android:showDividers="middle"
                        android:weightSum="2">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="start"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/following_value"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/following_value"
                                android:textAlignment="center" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/following"
                                android:textAlignment="center" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/following_number"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"

                                android:text="@string/post_value"
                                android:textAlignment="center" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/posts"
                                android:textAlignment="center" />


                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>


            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                app:cardElevation="5dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:divider="@color/colorPrimary"
                    android:orientation="vertical"
                    android:showDividers="middle">

                    <Button
                        android:id="@+id/btn_reviews"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="?android:attr/selectableItemBackground"
                        android:text="@string/reviews" />

                    <Button
                        android:id="@+id/btn_favourite"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="?android:attr/selectableItemBackground"
                        android:text="@string/favourites" />

                    <Button
                        android:id="@+id/btn_orderHistory"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="?android:attr/selectableItemBackground"
                        android:text="@string/order_history" />


                </LinearLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>


    </android.support.v4.widget.NestedScrollView>


    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_fav"
        app:elevation="6dp"
        app:layout_anchor="@id/app_bar_layout"
        app:layout_anchorGravity="bottom|center"
        app:pressedTranslationZ="12dp" />
</android.support.design.widget.CoordinatorLayout>
